HTML armado provisorio JS funcionando

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg barrabarra bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html"><img src="./img/logoblanco.png"
-                        alt="Bootstrap" width="100" height="100"></a>
+                        alt="Bootstrap" width="150" height="100"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
@@ -63,10 +63,10 @@
                     <p>Nosotros</p>
                 </a>
                 <a href="#" class="img-b">
-                    <p class="p-2lineas">Portafolio</p>
+                    <p class="p-2lineas">Pedidos</p>
                 </a>
                 <a href="#" class="img-c">
-                    <p>Tendencias</p>
+                    <p>Tragos</p>
                 </a>
                 <a href="#" class="img-d">
                     <p class="p-3lineas">Servicios</p>
@@ -75,42 +75,36 @@
                     <p class="p-1ymedialinea">Reseñas</p>
                 </a>
                 <a href="#" class="img-f">
-                    <p class="p-1ymedialinea">F</p>
+                    <p class="p-1ymedialinea">Tendencias</p>
                 </a>
                 <a href="#" class="img-g">
-                    <p class="p-1ymedialinea">G</p>
+                    <p class="p-1ymedialinea">Envios</p>
                 </a>
             </div>
         </section>
         <section class="image-gallery-section">
+            <h2>Momentos blinders</h2>
             <div class="image-gallery">
-                <img src='https://images.unsplash.com/photo-1661335996027-0a65af891c27?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI5OTQwNDU&ixlib=rb-1.2.1&q=80&w=400'
+                <img src= "https://images.unsplash.com/photo-1527281400683-1aae777175f8?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdoaXNreXxlbnwwfHwwfHx8MA%3D%3D"
                     alt=''>
-                <img src='https://images.unsplash.com/photo-1661189626525-3d7ec5d3087c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI5OTQwNDU&ixlib=rb-1.2.1&q=80&w=400'
+                <img src='https://i.pinimg.com/236x/c4/60/d0/c460d0bb82d3218a55332beb7724ae4b.jpg'
                     alt=''>
-                <img src='https://images.unsplash.com/photo-1660628504006-9416dd2a411f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI5OTQwNDU&ixlib=rb-1.2.1&q=80&w=400'
+                <img src='https://i.pinimg.com/236x/a3/5f/78/a35f78f3d74d56ea80242df18653ecd8.jpg'
                     alt=''>
-                <img src='https://images.unsplash.com/photo-1662441896128-691f7ac658ad?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI5OTQwNDU&ixlib=rb-1.2.1&q=80&w=400'
+                <img src='https://i.pinimg.com/236x/2b/fc/7f/2bfc7f1ad42617a96494b98e2eba83f7.jpg'
                     alt=''>
-                <img src='https://images.unsplash.com/photo-1661880374687-4ce390284f86?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI5OTQwNDU&ixlib=rb-1.2.1&q=80&w=400'
+                <img src='https://i.pinimg.com/236x/0d/be/13/0dbe1311f96e2c72cce357cbef2d46dd.jpg'
                     alt=''>
-                <img src='https://images.unsplash.com/photo-1661691111071-42c262ca061e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI5OTQwNDU&ixlib=rb-1.2.1&q=80&w=400'
+                <img src='https://i.pinimg.com/236x/74/4e/79/744e7975df288233f26dfd7fe679dbe9.jpg'
                     alt=''>
-                <img src='https://images.unsplash.com/photo-1696644542260-c0960b3b7233?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTk0NTAwMTF8&ixlib=rb-4.0.3&q=80&w=400'
+                <img src='https://i.pinimg.com/236x/9f/24/3b/9f243b03985dcfe750302d5c6b11c84a.jpg'
                     alt=''>
-                <img src='https://images.unsplash.com/photo-1661435805196-81136edfa297?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI5OTQxMTQ&ixlib=rb-1.2.1&q=80&w=400'
+                <img src='https://i.pinimg.com/236x/d1/6c/6f/d16c6fea774c06dbd97ffc56cab617c4.jpg'
                     alt=''>
-                <img src='https://images.unsplash.com/photo-1660584658489-a15f806f463c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI5OTQxMTQ&ixlib=rb-1.2.1&q=80&w=400'
+                <img src='https://i.pinimg.com/474x/ca/a7/46/caa74654ea9a8a65f46034f5641fac97.jpg'
                     alt=''>
             </div>
         </section>
- 
-
-
-
-
-
-
     </main>
     <footer class="site-footer">
         <div class="container">
