--- a/index.html
+++ b/index.html
@@ -7,12 +7,35 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilos.css">
-    <!--<link rel="stylesheet" href="./css/style.css">-->
-    <title>Pruebas</title>
+    <!-- <link rel="stylesheet" href="./css/estilos.css"> -->
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Home</title>
 </head>
 
 <body>
+    <div class="modal" id="validationModal">
+        <div class="form-container">
+            <form id="validationForm">
+                <div class="form-group">
+                    <label for="fullName">Nombre Completo:</label>
+                    <input class="input"  placeholder="¿Cuál es tu nombre?" type="text" id="fullName" name="fullName" required>
+                </div>
+                <div class="form-group">
+                    <label for="user">User:</label>
+                    <input class="input" placeholder="Selecciona tu usuario" type="text" id="user" name="user" required>
+                </div>
+                <div class="form-group">
+                    <label for="dob">Fecha de Nacimiento:</label>
+                    <input class="input" type="date" id="dob" name="dob" required>
+                </div>
+                <div class="botones">
+                    <button id="btn" type="submit">Enviar</button>
+                    <button id="btnDelete" type="button">Borrar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <header>
         <nav class="navbar navbar-expand-lg barrabarra bg-dark navbar-dark">
             <div class="container-fluid">
