--- a/index.html
+++ b/index.html
@@ -17,25 +17,60 @@
         <div class="form-container">
             <form id="validationForm">
                 <div class="form-group">
-                    <label for="fullName">Nombre Completo:</label>
+                    <label for="fullName">Nombre de Usuario:</label>
                     <input class="input"  placeholder="¿Cuál es tu nombre?" type="text" id="fullName" name="fullName" required>
                 </div>
                 <div class="form-group">
-                    <label for="user">User:</label>
-                    <input class="input" placeholder="Selecciona tu usuario" type="text" id="user" name="user" required>
+                    <label for="user">Clave:</label>
+                    <input class="input" placeholder="Ingresa tu clave" type="password" id="user" name="user" required>
                 </div>
                 <div class="form-group">
-                    <label for="dob">Fecha de Nacimiento:</label>
-                    <input class="input" type="date" id="dob" name="dob" required>
+                    <label for="fdn">Fecha de Nacimiento:</label>
+                    <input class="input" type="date" id="fdn" name="fdn" required>
                 </div>
                 <div class="botones">
-                    <button id="btn" type="submit">Enviar</button>
-                    <button id="btnDelete" type="button">Borrar</button>
+                    <button class="btn" id="btn" type="submit">Enviar</button>
+                    <button class="btnDelete" id="btnDelete" type="button">Borrar</button>
                 </div>
             </form>
         </div>
     </div>
 
+<!-- Icono del carrito  -->
+
+    <div class="fixed">
+        <button id="btnMostrarCarrito" type="button"><img src="./img/carrito.png" alt="logo de whatsapp"></button>
+    </div>
+
+<!-- Codigo del Carrito -->
+
+    <div id="carrito" class="oculto">
+        <h2 class="tituloCarrito">Carrito de Compras</h2>
+        <ul id="listaCompras"></ul>
+        <button id="btnOcultarCarrito">Ocultar Carrito</button>
+    </div>
+
+<!-- Modal bienvenida o mensaje de error  -->
+
+<div id="miModaIingreso" class="mimodal">
+    <div class="modal-content">
+        <div class="modalContent" id="modalContent">
+        <p class="parrafoModal">Bienvenido/a a la página.</p>
+        <img class="logosimple" src="./img/davis (100 x 100 px).png" alt="Bienvenida">
+        <button class="btncerrar" role="button" tabindex="0">Cerrar</button>
+        </div>
+    </div>
+</div>
+
+<div id="miModalDenegado" class="mimodaldenegado">
+    <div class="modal-content">
+        <div class="modalContent" id="modalContent">
+        <p class="parrafoModaldenegado">No puedes ingresar a la pagina. No ingresaste un valor correcto o no tienes edad suficiente para ingresar a la web.</p>
+        <img class="logosimple" src="./img/davis (100 x 100 px).png" alt="Bienvenida">
+        <button class="btncerrar" type="button">Cerrar</button>
+        </div>
+    </div>
+</div>
     <header>
         <nav class="navbar navbar-expand-lg barrabarra bg-dark navbar-dark">
             <div class="container-fluid">
@@ -49,7 +84,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" class="btn btn-outline-success" aria-current="page"
-                                href="#">Nosotros</a>
+                                href="#">Pedidos</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
@@ -81,28 +116,34 @@
         <section class="fotosgrid">
             <div class="galeriagrid">
                 <a href="#" class="img-a">
-                    <p>Nosotros</p>
+                    <p>Nosotros <span>(aun sin contenido)</span></p>
                 </a>
                 <a href="#" class="img-b">
                     <p class="p-2lineas">Pedidos</p>
                 </a>
                 <a href="#" class="img-c">
-                    <p>Tragos</p>
+                    <p>Tragos <span>(aun sin contenido)</span></p>
                 </a>
                 <a href="#" class="img-d">
-                    <p class="p-3lineas">Servicios</p>
+                    <p class="p-3lineas">Servicios <span>(aun sin contenido)</span></p>
                 </a>
                 <a href="#" class="img-e">
-                    <p class="p-1ymedialinea">Reseñas</p>
+                    <p class="p-1ymedialinea">Reseñas <span>(aun sin contenido)</span></p>
                 </a>
                 <a href="#" class="img-f">
-                    <p class="p-1ymedialinea">Tendencias</p>
+                    <p class="p-1ymedialinea">Tendencias <span>(aun sin contenido)</span></p>
                 </a>
                 <a href="#" class="img-g">
                     <p class="p-1ymedialinea">Envios</p>
                 </a>
             </div>
         </section>
+
+        <section>
+            <h2>Productos</h2>
+            <div class="card-container">
+
+            </div>
         <section class="image-gallery-section">
             <h2>Momentos blinders</h2>
             <div class="image-gallery">
@@ -126,25 +167,24 @@
                     alt=''>
             </div>
         </section>
+
     </main>
     <footer class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h6>About</h6>
-                    <p class="text-justify"> Descubre la excelencia en barbería en Barbudos. Con cortes clásicos y
-                        modernos,
-                        nuestro equipo experto te espera en Buceo, Montevideo. Sumérgete en una experiencia única y
-                        déjate
-                        sorprender. ¡Ven y vive el estilo Barbudos!</p>
+                    <p class="text-justify"> <span>Blinders</span>
+                        Es tu mejor opción para abastecerte de bebidas de calidad en Buceo, Montevideo.
+                        Ofrecemos una amplia variedad de bebidas alcohólicas para tus reuniones y celebraciones.
+                        ¡Haz tu pedido hoy y disfruta de un servicio rápido y confiable!!</p></p>
                 </div>
                 <div class="col-md-3 links">
                     <h6>SERVICIOS</h6>
                     <ul class="footer-links">
-                        <li><a href="https://elbarbudo.simplybook.me/v2/#book/service/2/count/1/">Corte de Pelo</a></li>
-                        <li><a href="https://elbarbudo.simplybook.me/v2/#book/service/3/count/1/">Corte y Perfilado de
-                                Barba</a></li>
-                        <li><a href="https://elbarbudo.simplybook.me/v2/#book/service/4/count/1/">Perfilado de Barba</a>
+                        <li><a href="#">Venta por Menor</a></li>
+                        <li><a href="#">Venta por Mayor</a></li>
+                        <li><a href="#">Cotizacion para eventos</a>
                         </li>
 
                     </ul>
