--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./css/estilos.css"> -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"> <!--esto es toastify -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Home</title>
 </head>
@@ -53,6 +54,7 @@
 
     <div class="fixed">
         <button id="btnMostrarCarrito" type="button"><img src="./img/carrito.png" alt="logo de whatsapp"></button>
+        
     </div>
 
 <!-- Codigo del Carrito -->
@@ -60,7 +62,8 @@
     <div id="carrito" class="oculto">
         <h2 class="tituloCarrito">Carrito de Compras</h2>
         <ul id="listaCompras"></ul>
-        <button id="btnOcultarCarrito">Ocultar Carrito</button>
+        <button id="btnConfirmarPedido" class="btnConfirmarPedido">Confirmar Pedido</button>
+        <button id="btnOcultarCarrito" class="btnOcultarCarrito">Ocultar Carrito</button>
     </div>
 
 <!-- Modal bienvenida o mensaje de error quedo este solo, no es el denegado, es en el que se imprimen todos los mensajes  -->
@@ -74,6 +77,35 @@
         </div>
     </div>
 </div>
+
+<div id="modalConfirmarPedido" class="modal-confirmar-pedido">
+<div class="modal-content-confirmar-pedido">
+    <div class="modal-header-confirmar-pedido">
+    <h2>Resumen de la Compra</h2>
+    <span class="close-confirmar-pedido" id="btnCerrarConfirmarPedido">&times;</span>
+    </div>
+    <div id="resumenCompra" class="resumen-compra-contenido"></div>
+    <div class="forma-pago-entrega">
+    <h3>Forma de Pago</h3>
+    <select id="formaPago">
+        <option value="efectivo">Efectivo</option>
+        <option value="tarjeta">Tarjeta</option>
+        <option value="mercadoPago">Mercado Pago</option>
+        <option value="transferencia">Transferencia Bancaria</option>
+    </select>
+    </div>
+    <div class="forma-pago-entrega">
+    <h3>Forma de Entrega</h3>
+    <select id="formaEntrega">
+        <option value="local">Retirar por el Local</option>
+        <option value="envio">Enviar a Domicilio</option>
+    </select>
+    </div>
+    <button id="btnFinalizarCompra" class="btn-finalizar-compra">Finalizar Compra</button>
+</div>
+</div>
+
+
     <header>
         <nav class="navbar navbar-expand-lg barrabarra bg-dark navbar-dark">
             <div class="container-fluid">
@@ -116,41 +148,43 @@
         </section>
     </header>
     <main>
-        <section class="fotosgrid">
-            <div class="galeriagrid">
-                <a href="#" class="img-a">
-                    <p>Nosotros <span>(aun sin contenido)</span></p>
-                </a>
-                <a href="#" class="img-b">
-                    <p class="p-2lineas">Pedidos</p>
-                </a>
-                <a href="#" class="img-c">
-                    <p>Tragos <span>(aun sin contenido)</span></p>
-                </a>
-                <a href="#" class="img-d">
-                    <p class="p-3lineas">Servicios <span>(aun sin contenido)</span></p>
-                </a>
-                <a href="#" class="img-e">
-                    <p class="p-1ymedialinea">Reseñas <span>(aun sin contenido)</span></p>
-                </a>
-                <a href="#" class="img-f">
-                    <p class="p-1ymedialinea">Tendencias <span>(aun sin contenido)</span></p>
-                </a>
-                <a href="#" class="img-g">
-                    <p class="p-1ymedialinea">Envios</p>
-                </a>
+        <div class="hero-titulo-boton">
+            <h3> Las bebidas para tus momentos inolvidables</h3>
+            <a href="#productos" class="boton-hero">Encontralas acá!</a>
+        </div>
+        <section class="contenedorImagenes" id="contenedorImagenes">
+            <div class="img-container">
+                <button id="botonFernet"><img src="./img/marcas/branca.png" alt="Fernet Branca"></button>
+            </div>
+            <div class="img-container">
+                <button id="botonJagger"><img src="./img/marcas/jagermaster.png" alt="Jägermeister"></button>
+            </div>
+            <div class="img-container">
+                <button id="botonTanque"><img src="./img/marcas/tanqueray.png" alt="Tanqueray"></button>
+            </div>
+            <div class="img-container ultimaImagen">
+                <button id="botonJhonnie"><img src="./img/marcas/jhonnywalker.png" alt="Johnnie Walker"></button>
             </div>
         </section>
 
+        <div class="publicidad" id="publicidad"></div>
+        
         <section>
-            <h2>Productos</h2>
+            <section class="nosotros">
+                <h1>El secreto de las mejores reuniones está en nuestras bebidas</h1>
+                <p class="custom-shape-p">
+                    Déjate seducir por nuestra selección exclusiva de bebidas premium, ideales para tus ocasiones especiales. En nuestra distribuidora, nos esforzamos por ofrecerte solo lo mejor, garantizando que cada sorbo sea una experiencia única e inolvidable. Descubre la excelencia líquida con nosotros y eleva tus celebraciones a un nivel superior.
+
+                </p>
+            </section>
+            <h2 id="productos"></h2>
             <div class="card-container">
 
             </div>
         <section class="image-gallery-section">
             <h2>Momentos blinders</h2>
             <div class="image-gallery">
-                <img src= "https://images.unsplash.com/photo-1527281400683-1aae777175f8?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdoaXNreXxlbnwwfHwwfHx8MA%3D%3D"
+                <img src= "https://images.unsplash.com/photo-1659709521486-fb4bc2eb4c10?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8am9obm5pZSUyMHdhbGtlcnxlbnwwfHwwfHx8MA%3D%3D"
                     alt=''>
                 <img src='https://i.pinimg.com/236x/c4/60/d0/c460d0bb82d3218a55332beb7724ae4b.jpg'
                     alt=''>
@@ -219,6 +253,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
