--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
     </div>
 </div>
 
+<!--Modal confirmacion Pedido-->
+
 <div id="modalConfirmarPedido" class="modal-confirmar-pedido">
 <div class="modal-content-confirmar-pedido">
     <div class="modal-header-confirmar-pedido">
